--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=HikeHubDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "DefaultConnection": "Host=localhost;Port=5432;Database=HikeHub;Username=postgres;Password=1234567890"
   }
 }
